Added equity gold project to portfolio

--- a/portfolio_equiti_gold.html
+++ b/portfolio_equiti_gold.html
@@ -79,9 +79,9 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Byebye: Organize.Declutter.</h1>
-              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Your Stuff. Your Lists. Organize.
-                Declutter.</h2>
+              <h1 class="heading" data-aos="fade-up">EQUITI GOLD</h1>
+              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Change how you own physical gold. Equiti
+                Gold app to buy and sell physical gold, gift it or have gold delivered home.</h2>
             </div>
 
           </div>
@@ -101,67 +101,67 @@
       <div class="container">
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
-            <h2 class="heading-portfolio-single-h2">Byebye: Organize.Declutter.</h2>
+            <h2 class="heading-portfolio-single-h2">EQUITI GOLD</h2>
 
             <div class="row gutter-v4 align-items-stretch mb-5">
 
               <div class="col-sm-6 col-md-6 col-lg-8 blog-post-entry">
-                <iframe width="100%" height="300" src="https://www.youtube.com/embed/_b12LEjVd-k?si=hgaWQiKxE_H5V5ku"
-                  frameborder="0" allowfullscreen ng-show="showvideo">
+                <iframe width="100%" height="300" src="https://www.youtube.com/embed/Ni3DIN8XzhU" frameborder="0"
+                  allowfullscreen ng-show="showvideo">
                 </iframe>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/byebye1.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                <a href="images/gold1.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay">
                     <div class="portfolio-item-content">
-                      <h3>Stay updated with community news.</h3>
+                      <h3>Own gold easily</h3>
                     </div>
                   </div>
-                  <img src="images/byebye1.jpg" class="lazyload" alt="Image" />
+                  <img src="images/gold1.jpg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
 
-                <a href="images/byebye2.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                <a href="images/gold2.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay">
                     <div class="portfolio-item-content">
-                      <h3>Your stuff, your lists, one unique inventory</h3>
+                      <h3>Pay instantly</h3>
                     </div>
                   </div>
-                  <img src="images/byebye2.jpg" class="lazyload" alt="Image" />
+                  <img src="images/gold2.jpg" class="lazyload" alt="Image" />
                 </a>
 
               </div>
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/byebye3.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                <a href="images/gold3.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay">
                     <div class="portfolio-item-content">
-                      <h3>Breakdown of your inventory</h3>
+                      <h3>Premium minting</h3>
                     </div>
                   </div>
-                  <img src="images/byebye3.jpg" class="lazyload" alt="Image" />
+                  <img src="images/gold3.jpg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/byebye4.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                <a href="images/gold4.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay">
                     <div class="portfolio-item-content">
-                      <h3>Get in contact easy. Socialize.</h3>
+                      <h3>Deliver gold home</h3>
                     </div>
                   </div>
-                  <img src="images/byebye4.jpg" class="lazyload" alt="Image" />
+                  <img src="images/gold4.jpg" class="lazyload" alt="Image" />
                 </a>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/byebye5.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                <a href="images/gold5.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
                   <div class="overlay">
                     <div class="portfolio-item-content">
-                      <h3>Get inspired by others like you</h3>
+                      <h3>Buy gold investment bars</h3>
                     </div>
                   </div>
-                  <img src="images/byebye5.jpg" class="lazyload" alt="Image" />
+                  <img src="images/gold5.jpg" class="lazyload" alt="Image" />
                 </a>
               </div>
 
@@ -173,7 +173,7 @@
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Project Date</span>
-                      <span class="detail-val">April 1st, 2019 to January 31st, 2021</span>
+                      <span class="detail-val">May 25th, 2024 to July 10th, 2025</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
@@ -185,89 +185,64 @@
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Client</span>
-                      <span class="detail-val">Marius Pruna</span>
+                      <span class="detail-val">Equiti</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Visit</span>
-                      <span class="detail-val"><a href="https://byebye.io/">www.byebye.io</a></span>
+                      <span class="detail-val"><a href="https://www.equiti.com/gold/en/">www.equiti.com</a></span>
                     </div>
                   </div>
                 </div>
               </div>
 
               <div class="col-md-6 pl-md-5">
-                <li>Your stuff, your lists, one unique inventory</li>
-                <p>Use the app to create lists and start adding items. Once done, you'll get a clear view of what is in
-                  and what must goout.</p><br />
-                <li>Labels</li>
-                <p>One item fits more than one list? No worries. Add labels to avoid duplicates and sort your things
-                  based on their destination</p><br />
-                <li>Wishlist</li>
-                <p>Don’t forget the items you’re interested in! Add them to your wishlist, and move them in your
-                  inventory once they’re purchased</p><br />
-                <li>Direct chat</li>
-                <p>Got your eyes on something you wish to purchase in the near future? Ask people who already use
-                  something similar if you should do it or not.</p><br />
-                <li>Community</li>
-                <p>Join our social media channels to get in touch on other platforms as well. Invite your friends to
-                  join our fast growing community!</p><br />
-                <li>Regrets</li>
-                <p>Use the Byebye Regret option to keep track of everything that doesn’t bring joy anymore. Move them to
-                  the Marketplace, your clutter might be someone else’s must-have stuff</p><br />
-                <li>Marketplace</li>
-                <p>Search what other people in your area are willing to sell or swap or donate. See what's available
-                  around you. Or where you want to relocate soon.</p><br />
+                <li>Instant physical gold ownership</li>
+                <p>Buy or sell real gold instantly via a mobile app using live global prices.</p><br />
+                <li>Minimum 1-gram increments</li>
+                <p>Start investing with as little as 1g of gold, making it accessible to all.</p><br />
+                <li>UAEGD-certified 999.9 purity</li>
+                <p>All gold sourced from UAE Good Delivery refineries, ensuring investment-grade authenticity.</p><br />
+                <li>Secure and insured transactions</li>
+                <p>Gold holdings and physical deliveries are fully insured and handled by trusted partners.</p><br />
+                <li>Physical delivery option</li>
+                <p>Request insured bullion or coins to be delivered to your UAE address for holdings ≥ 50g.</p><br />
+                <li>Diversification and inflation hedge</li>
+                <p>Helps protect against inflation, volatility, and currency devaluation.</p><br />
+                <li>Real-time transparent pricing</li>
+                <p>Users see live global market prices and can transact instantly.</p><br />
+                <li>Free account with easy onboarding</li>
+                <p>Simple sign-up with ID, passport or UAE resident credentials, and linkage to cards or bank transfers.
+                </p><br />
               </div>
 
               <div class="col-md-6 pr-md-5">
                 <div class="detail-v1">
                   <span class="detail-label">Project Description</span>
-                  <p>Byebye is an exceptional home organizing app that has been designed for minimalists who want to
-                    streamline their lives and declutter their homes. The app's minimalist interface allows users to
-                    easily categorize and organize their belongings, making it easier for them to keep track of their
-                    possessions and reduce clutter. With Byebye, users can easily manage their belongings and get rid of
-                    the things that no longer serve them, making room for the things that do. The app provides users
-                    with an easy-to-use interface that makes it simple to categorize items, sort them by room, and
-                    decide which items are essential and which ones can be discarded. With Byebye, users can easily
-                    track their progress and see how much they've decluttered over time. The app also provides tips and
-                    tricks on how to organize a minimalist home, making it an indispensable tool for anyone who wants to
-                    simplify their life and reduce the amount of clutter in their living space. Overall, Byebye is the
-                    best home organizing app for minimalists who want to live a more streamlined and clutter-free life.
+                  <p>Equiti Gold reimagines physical gold investment by packaging it into a modern, user-friendly mobile
+                    experience. Available on both iOS and Android, the platform lets users buy, sell, gift, and even
+                    receive physical gold deliveries—all within a few taps.
                   </p>
+                  <p>Upon downloading and opening the app, investors can create a free account using simple identity
+                    documents (UAE ID or passport), email, and a selfie for security. After linking payment methods—such
+                    as bank transfers or credit/debit cards—they can begin purchasing gold in increments as small as 1
+                    gram, lowering the entry barrier to precious metal investment.
+                  </p>
+                  <p>Beyond buying and selling, Equiti Gold allows you to gift gold instantly to other app users via a
+                    QR code and supports secure physical deliveries. Physical orders become available when holdings
+                    reach 50 grams or more, with insured courier service and certified packaging provided. The recipient
+                    must provide ID or passport upon delivery—ensuring security throughout the process.
+                  </p>
+                  <p>In summary, Equiti Gold modernizes gold ownership through a clean and transparent digital platform
+                    that combines accessibility, flexibility, and peace of mind. Whether you’re a beginner wanting to
+                    dip your toes into precious metals or a seasoned investor looking for a secure hedge, the app’s
+                    features—live pricing, minimal investment size, gifting, delivery, and regulation—position it as a
+                    compelling solution. It's a seamless path to diversify your portfolio, combat
+                    inflation, and stay connected to one of the world’s oldest and most reliable assets.</p>
                 </div>
               </div>
             </div>
-
-            <div class="row justify-content-center mb-5">
-              <div class="col-md-12">
-                <div class="testimonial-v1">
-                  <div class="testimonial-inner-bg">
-                    <span class="quote">&ldquo;</span>
-                    <blockquote>
-                      I’ve had the pleasure to work with Divyanshu for almost a year on a project that started from an
-                      idea and ended up as a beautiful app, downloaded and appreciated by tens of thousands of people
-                      worldwide. Divyanshu is an excellent team player. His skills and professional expertise brought
-                      value to the project with each iteration along the way. His openness to collaborate, his attention
-                      to detail, and his willingness to go the extra mile every time, are only a few of the qualities
-                      that make him a valuable asset to any team.
-                      <br />
-                      Thank you, Divyanshu! Keep up the good work!
-                    </blockquote>
-                  </div>
-
-                  <div class="testimonial-author-info">
-                    <img src="images/marius.jpeg" alt="Image">
-                    <h3>Marius Pruna</h3>
-                    <span class="d-block position">Owner @Byebye</span>
-                  </div>
-
-                </div>
-              </div>
-            </div>
-
-
           </div>
         </div>
       </div>
