--- a/index.html
+++ b/index.html
@@ -149,6 +149,19 @@
 
             <div id="posts" class="row gutter-isotope-item">
               <div class="item vehicle packaging illustration col-sm-6 col-md-6 col-lg-6 isotope-mb-2 ">
+                <a href="portfolio_equiti_gold.html"
+                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="1">
+                  <div class="overlay">
+                    <div class="portfolio-item-content">
+                      <h3 style="color: #000000;">Equiti Gold</h3>
+                      <p style="color: #000000;">Change how you own physical gold</p>
+                    </div>
+                  </div>
+                  <img src="images/gold.jpg" class="lazyload  img-fluid" alt="Images" />
+                </a>
+              </div>
+
+              <div class="item vehicle packaging illustration col-sm-6 col-md-6 col-lg-6 isotope-mb-2 ">
                 <a href="portfolio_wsac.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="1">
                   <div class="overlay">
