Fixed labels and filters

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 
             <div id="posts" class="row gutter-isotope-item">
-              <div class="item vehicle packaging illustration col-sm-6 col-md-6 col-lg-6 isotope-mb-2 ">
+              <div class="item erp packaging illustration col-sm-6 col-md-6 col-lg-6 isotope-mb-2 ">
                 <a href="portfolio_equiti_gold.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="1">
                   <div class="overlay">
@@ -163,7 +163,7 @@
 
               <div class="item vehicle packaging illustration col-sm-6 col-md-6 col-lg-6 isotope-mb-2 ">
                 <a href="portfolio_wsac.html"
-                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="1">
+                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="2">
                   <div class="overlay">
                     <div class="portfolio-item-content">
                       <h3>We Swap Any Car</h3>
@@ -176,7 +176,7 @@
 
               <div class="item generic social col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_helpozzy.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page"
-                  data-id="2">
+                  data-id="3">
                   <div class="overlay">
                     <div class="portfolio-item-content">
                       <h3>Helpozzy</h3>
@@ -189,7 +189,7 @@
 
               <div class="item erp social col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_byebye.html"
-                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="3">
+                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="4">
                   <div class="overlay">
                     <div class="portfolio-item-content">
                       <h3>Byebye: Organize. Declutter.</h3>
@@ -202,7 +202,7 @@
 
               <div class="item erp packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_equipr.html"
-                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="4">
+                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="5">
                   <div class="overlay">
                     <div class="portfolio-item-content">
                       <h3>Operator365</h3>
@@ -215,7 +215,7 @@
 
               <div class="item social branding col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_lok.html"
-                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="5">
+                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="6">
                   <div class="overlay">
                     <div class="portfolio-item-content">
                       <h3>Lok - Secure & Uncensored</h3>
@@ -228,7 +228,7 @@
 
               <div class="item ecommerce packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_koshervalue.html"
-                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="6">
+                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="7">
                   <div class="overlay">
                     <div class="portfolio-item-content">
                       <h3>Kosher Value</h3>
@@ -240,7 +240,7 @@
               </div>
               <div class="item learning packaging col-sm-6 col-md-6 col-lg-6 isotope-mb-2">
                 <a href="portfolio_chinesepod.html"
-                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="6">
+                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="8">
                   <div class="overlay">
                     <div class="portfolio-item-content">
                       <h3>ChinesePod</h3>
@@ -311,7 +311,9 @@
         <div class="container">
 
           <div class="section-heading-wrap text-center mb-5">
-            <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">My Services</span></h2>
+            <h2 class="heading-h2 text-center divider">
+              <span class="gsap-reveal">Professional Services</span>
+            </h2>
             <span class="gsap-reveal"><img src="images/divider.png" alt="divider" width="76"></span>
           </div>
 
@@ -321,7 +323,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/001-options.svg" alt="Image" width="45">
                 </div>
-                <h3>Digital <br> Strategy</h3>
+                <h3>Digital Strategy</h3>
                 <p>Developing a successful digital strategy for mobile development involves setting clear goals,
                   understanding your audience, choosing the right platforms, creating engaging UX/UI designs, optimizing
                   app store listings, implementing effective marketing tactics, fostering user engagement, selecting
@@ -335,7 +337,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/005-line-chart.svg" alt="Image" width="45">
                 </div>
-                <h3>Mobile <br> Applications</h3>
+                <h3>Mobile Applications</h3>
                 <p>Crafting innovative mobile solutions for modern needs, our app combines intuitive design with
                   powerful functionality to streamline tasks, enhance productivity, and elevate user experiences.
                   Seamlessly integrating into users' daily lives, our app offers convenience, efficiency, and a touch of
@@ -347,7 +349,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/003-contact-book.svg" alt="Image" class="img-fluid" width="45">
                 </div>
-                <h3>User <br> Experience</h3>
+                <h3>User Experience</h3>
                 <p>Discover our mobile app portfolio, where every pixel is thoughtfully crafted to deliver an
                   unparalleled user interface experience. With clean designs, intuitive layouts, and seamless
                   navigation, our apps redefine simplicity and elegance on the mobile screen. From eye-catching visuals
@@ -363,7 +365,9 @@
       <div class="unslate_co--section section-counter" id="skills-section">
         <div class="container">
           <div class="section-heading-wrap text-center mb-5">
-            <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">My Skills</span></h2>
+            <h2 class="heading-h2 text-center divider">
+              <span class="gsap-reveal">Crafted Skills & Technical Expertise</span>
+            </h2>
             <span class="gsap-reveal"><img src="images/divider.png" alt="divider" width="76"></span>
           </div>
 
@@ -521,7 +525,7 @@
             <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
               <div class="counter-v1 text-center">
                 <span class="number-wrap">
-                  <span class="number number-counter" data-number="97">0</span>
+                  <span class="number number-counter" data-number="51">0</span>
                   <span class="append-text">%</span>
                 </span>
                 <span class="counter-label">Flutter Flow</span>
