--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </nav>
       <!-- END nav -->
 
-      <div class="cover-v1 jarallax" style="background-image: url('images/cover_bg.jpeg');" id="home-section">
+      <div class="cover-v1 jarallax" style="background-image: url('images/cover_bg.png');" id="home-section">
         <div class="container">
           <div class="row align-items-center">
 
