--- a/index.html
+++ b/index.html
@@ -726,6 +726,30 @@
   <script src="js/scripts-dist.js"></script>
   <script src="js/main.js"></script>
 
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyCqpLvQt_XlgeQCp4VD-U2SoILQbtwUfXI",
+      authDomain: "portfolio-d03f6.firebaseapp.com",
+      projectId: "portfolio-d03f6",
+      storageBucket: "portfolio-d03f6.firebasestorage.app",
+      messagingSenderId: "662058513212",
+      appId: "1:662058513212:web:b65b4e5e74903eceb5e439",
+      measurementId: "G-5SQZ90L9NN"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
+
 </body>
 
 </html>
