--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
             <div class="col-md-7 mx-auto text-center">
               <h1>
-                <span class="heading gsap-reveal-hero text-white">DIVYANSHU</span>
+                <span class="heading gsap-reveal-hero" style="color:#000000">DIVYANSHU</span>
                 <span class="heading gsap-reveal-hero" style="color:#D63447">KORAT</span>
               </h1>
               <h2>
-                <span class="text-white">I’m a passionate</span>
+                <span style="color:#000000">I’m a passionate</span>
                 <span style="color:#D63447">Mobile Application Developer,</span>
-                <span class="text-white"> dedicated to creating user-friendly and innovative solutions.</span><br />
-                <span class="text-white">Let’s turn your ideas into exceptional digital experiences!<span />
+                <span style="color:#000000"> dedicated to creating user-friendly and innovative solutions.</span><br />
+                <span style="color:#000000">Let’s turn your ideas into exceptional digital experiences!<span />
               </h2>
             </div>
           </div>
