Changed the nav bar text color

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
           <div class="row align-items-center justify-content-between text-left">
             <div class="col-md-5 text-right">
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
-                <li><a href="#home-section" class="nav-link">Home</a></li>
-                <li><a href="#portfolio-section" class="nav-link">Portfolio</a></li>
-                <li><a href="#about-section" class="nav-link">About</a></li>
+                <li><a href="#home-section" class="nav-link" style="color:#000000">Home</a></li>
+                <li><a href="#portfolio-section" class="nav-link" style="color:#000000">Portfolio</a></li>
+                <li><a href="#about-section" class="nav-link" style="color:#000000">About</a></li>
               </ul>
             </div>
             <div class="site-logo pos-absolute">
-              <a href="index.html" class="unslate_co--site-logo">DK<span>.</span></a>
+              <a href="index.html" class="unslate_co--site-logo" style="color:#000000">DK<span>.</span></a>
             </div>
             <div class="col-md-5 text-right text-lg-left">
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
-                <li><a href="#services-section" class="nav-link">Services</a></li>
-                <li><a href="#testimonial-section" class="nav-link">Testimonial</a></li>
-                <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                <li><a href="#services-section" class="nav-link" style="color:#000000">Services</a></li>
+                <li><a href="#testimonial-section" class="nav-link" style="color:#000000">Testimonial</a></li>
+                <li><a href="#contact-section" class="nav-link" style="color:#000000">Contact</a></li>
               </ul>
 
               <ul class="site-nav-ul-none-onepage text-right d-inline-block d-lg-none">
